move pwm config in code

--- a/platformio.ini
+++ b/platformio.ini
@@ -24,13 +24,13 @@ extra_scripts = pre:scripts/override_copy.py
 board = esp32dev
 build_flags = ${defaults.build_flags}
 
-  -DDCF77_PWM_PIN=26
+  -DDCF77_GPIO=26
 
 [env:ttgo-t-display]
 board = esp32dev
 build_flags = ${defaults.build_flags}
 
-  -DDCF77_PWM_PIN=27
+  -DDCF77_GPIO=27
 
   -DUSE_DISPLAY=1
   -DDISPLAY_ROTATION=3
@@ -76,7 +76,7 @@ lib_deps =
 board = lilygo-t-display-s3
 build_flags = ${defaults.build_flags}
 
-  -DDCF77_PWM_PIN=43
+  -DDCF77_GPIO=43
 
   -DUSE_DISPLAY=1
   -DDISPLAY_ROTATION=3
@@ -128,7 +128,7 @@ board = denky32
 upload_speed  = 460800
 build_flags = ${defaults.build_flags}
 
-  -DDCF77_PWM_PIN=25
+  -DDCF77_GPIO=25
 
   -DUSE_DISPLAY=1
   -DDISPLAY_ROTATION=3
