added core2 support using rtc

--- a/platformio.ini
+++ b/platformio.ini
@@ -167,3 +167,40 @@ build_flags = ${defaults.build_flags}
 
 lib_deps =
   TFT_eSPI@^2.5.41
+
+
+[env:core2]
+board = m5stack-core2
+build_flags = ${defaults.build_flags}
+  -DCORE2
+
+  -DUSE_DISPLAY=1
+  -DDCF77_GPIO=32
+
+  -DDISPLAY_ROTATION=1
+  -DDISPLAY_WIDTH=320
+  -DDISPLAY_HEIGHT=240
+  -DDISPLAY_MSG_FONT=4
+  -DDISPLAY_TIME_FONT=7
+  -DDISPLAY_DATA_FONT=4
+  -DDISPLAY_BG=TFT_BLACK
+  -DDISPLAY_FG=TFT_WHITE
+
+  -DUSER_SETUP_LOADED=1
+  -DILI9341_DRIVER=1
+  -DM5STACK=1
+  -DTFT_INVERSION_ON=1
+  -DTFT_MISO=38
+  -DTFT_MOSI=23
+  -DTFT_SCLK=18
+  -DTFT_CS=5
+  -DTFT_DC=15
+  -DTOUCH_CS=-1
+
+  -DLOAD_FONT4=1
+  -DLOAD_FONT7=1
+
+  -DBOARD_HAS_PSRAM=1
+
+lib_deps =
+  TFT_eSPI@^2.5.41
