use timezone to sync time

--- a/defaults_override_sample.ini
+++ b/defaults_override_sample.ini
@@ -3,8 +3,7 @@ build_flags =
   -O2
   -DWIFI_SSID="WiFi SSID"
   -DWIFI_PASSWD="WiFi password"
+  -DNTP_TZ='"CET-1CEST,M3.5.0,M10.5.0/03"'
   -DNTP_SERVER1='"pool.ntp.org"'
   -DNTP_SERVER2='NULL'
   -DNTP_SERVER3='NULL'
-  -DGMT_OFFSET=1
-  -DDST_OFFSET=0
