--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,7 @@ default_envs = generic
 extra_configs = defaults_override.ini
 
 [env]
-platform = espressif32
+platform = espressif32@6.5.0
 framework = arduino
 upload_speed  = 921600
 monitor_speed = 115200
@@ -70,7 +70,7 @@ build_flags = ${defaults.build_flags}
   -DSPI_READ_FREQUENCY=6000000
 
 lib_deps =
-  TFT_eSPI@^2.5.41
+  TFT_eSPI@^2.5.43
 
 [env:lilygo-t-display]
 board = lilygo-t-display-s3
@@ -121,14 +121,14 @@ build_flags = ${defaults.build_flags}
   -DARDUINO_USB_CDC_ON_BOOT=1
 
 lib_deps =
-  TFT_eSPI@^2.5.41
+  TFT_eSPI@^2.5.43
 
 [env:wizee]
 board = denky32
 upload_speed  = 460800
 build_flags = ${defaults.build_flags}
 
-  -DDCF77_GPIO=25
+  -DDCF77_GPIO=26
 
   -DUSE_DISPLAY=1
   -DDISPLAY_ROTATION=3
@@ -166,8 +166,7 @@ build_flags = ${defaults.build_flags}
   -DSPI_TOUCH_FREQUENCY=600000
 
 lib_deps =
-  TFT_eSPI@^2.5.41
-
+  TFT_eSPI@^2.5.43
 
 [env:core2]
 board = m5stack-core2
@@ -203,4 +202,4 @@ build_flags = ${defaults.build_flags}
   -DBOARD_HAS_PSRAM=1
 
 lib_deps =
-  TFT_eSPI@^2.5.41
+  TFT_eSPI@^2.5.43
