fixed missing defaults override error

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,13 +22,13 @@ extra_scripts = pre:scripts/override_copy.py
 
 [env:generic]
 board = esp32dev
-build_flags = ${defaults.build_flags}
+build_flags = ${env.build_flags}
 
   -DDCF77_GPIO=26
 
 [env:ttgo-t-display]
 board = esp32dev
-build_flags = ${defaults.build_flags}
+build_flags = ${env.build_flags}
 
   -DDCF77_GPIO=27
 
@@ -74,7 +74,7 @@ lib_deps =
 
 [env:lilygo-t-display]
 board = lilygo-t-display-s3
-build_flags = ${defaults.build_flags}
+build_flags = ${env.build_flags}
 
   -DDCF77_GPIO=16
 
@@ -126,7 +126,7 @@ lib_deps =
 [env:wizee]
 board = denky32
 upload_speed  = 460800
-build_flags = ${defaults.build_flags}
+build_flags = ${env.build_flags}
 
   -DDCF77_GPIO=26
 
@@ -170,7 +170,7 @@ lib_deps =
 
 [env:core2]
 board = m5stack-core2
-build_flags = ${defaults.build_flags}
+build_flags = ${env.build_flags}
   -DCORE2
 
   -DDCF77_GPIO=32
