added dcf77 encoding time offset

--- a/defaults_override_sample.ini
+++ b/defaults_override_sample.ini
@@ -6,3 +6,4 @@ build_flags =
   -DNTP_SERVER1='"pool.ntp.org"'
   -DNTP_SERVER2='"europe.pool.ntp.org"'
   -DNTP_SERVER3='NULL'
+  -DDCF77_TIME_OFS=1
